// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/spin/demo/basic.md correctly 1`] = `
<div>
  <div class="ant-spin ant-spin-spinning"><span class="ant-spin-dot ant-spin-dot-spin"><i></i><i></i><i></i><i></i></span></div>
</div>
`;

exports[`renders ./components/spin/demo/custom-indicator.md correctly 1`] = `
<div>
  <div class="ant-spin ant-spin-spinning"><i class="anticon anticon-loading anticon-spin ant-spin-dot" style="font-size: 24px;"></i></div>
  <div class="ant-spin ant-spin-spinning"><i class="anticon anticon-loading anticon-spin ant-spin-dot" style="font-size: 24px;"></i></div>
</div>
`;

exports[`renders ./components/spin/demo/delayAndDebounce.md correctly 1`] = `
<div>
  <div class="ant-spin-nested-loading">
    <div class="ant-spin-container">
      <div class="spin-content">
        可以点击‘切换’按钮，延迟显示 loading 效果。当 spinning 状态在 \`delay\` 时间内结束，则不显示 loading 状态。
      </div>
    </div>
  </div>
  Loading state：<span tabindex="0" class="ant-switch"><span class="ant-switch-inner"></span></span>
</div>
`;

exports[`renders ./components/spin/demo/inside.md correctly 1`] = `
<div class="example">
  <div class="ant-spin ant-spin-spinning"><span class="ant-spin-dot ant-spin-dot-spin"><i></i><i></i><i></i><i></i></span></div>
</div>
`;

exports[`renders ./components/spin/demo/nested.md correctly 1`] = `
<div>
  <div class="ant-spin-nested-loading">
    <div class="ant-spin-container">
      <div class="spin-content">
        可以点击‘切换’按钮，控制本区域的spin展示。
      </div>
    </div>
  </div>
  Loading state：<span tabindex="0" class="ant-switch"><span class="ant-switch-inner"></span></span>
</div>
`;

exports[`renders ./components/spin/demo/size.md correctly 1`] = `
<div>
  <div class="ant-spin ant-spin-sm ant-spin-spinning"><span class="ant-spin-dot ant-spin-dot-spin"><i></i><i></i><i></i><i></i></span></div>
  <div class="ant-spin ant-spin-spinning"><span class="ant-spin-dot ant-spin-dot-spin"><i></i><i></i><i></i><i></i></span></div>
  <div class="ant-spin ant-spin-lg ant-spin-spinning"><span class="ant-spin-dot ant-spin-dot-spin"><i></i><i></i><i></i><i></i></span></div>
</div>
`;

exports[`renders ./components/spin/demo/tip.md correctly 1`] = `
<div>
  <div class="ant-spin-nested-loading">
    <div>
      <div class="ant-spin ant-spin-spinning ant-spin-show-text"><span class="ant-spin-dot ant-spin-dot-spin"><i></i><i></i><i></i><i></i></span>
        <div class="ant-spin-text">Loading...</div>
      </div>
    </div>
    <div class="ant-spin-container ant-spin-blur">
      <div class="spin-content">
        我的描述文案是自定义的。。。
      </div>
    </div>
  </div>
</div>
`;
